# injection-fixtures

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  mirror.yml
benchmark/: run_framewall.py
docs/: techniques.md
docs/benchmarks/: framewall.md
injection_fixtures/: __init__.py  __main__.py  _util.py  benign.py  catalog.py  cli.py  model.py  plugin.py  techniques.py
tests/: conftest.py  test_benchmark.py  test_benign.py  test_catalog.py  test_cli.py  test_plugin_integration.py  test_util.py
