[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "injection-fixtures"
version = "0.1.0"
description = "Known visual prompt-injection payloads packaged as pytest fixtures, so a screenshot- or computer-use agent can be tested against them in CI."
readme = "README.md"
license = { text = "Prosperity Public License 3.0.0" }
requires-python = ">=3.9"
authors = [{ name = "Cole Munz" }]
dependencies = ["Pillow>=10.1"]
keywords = ["prompt-injection", "pytest", "pytest-plugin", "testing", "security",
            "computer-use", "vision", "agents", "ocr", "fixtures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/munzzyy/injection-fixtures"
Issues = "https://github.com/munzzyy/injection-fixtures/issues"

[project.scripts]
injection-fixtures = "injection_fixtures.cli:main"

[project.entry-points.pytest11]
injection_fixtures = "injection_fixtures.plugin"

[tool.setuptools.packages.find]
include = ["injection_fixtures*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
